<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_one"
    tools:context="com.id11993577.exercise2.ActivityOne">

    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TopSection">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/profile_dp"
            android:id="@+id/image"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image"
            android:id="@+id/title"
            android:text="@string/title"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleComment"
            android:layout_toRightOf="@id/image"
            android:layout_below="@id/title"
            android:textSize="10dp"
            android:textStyle="italic"
            android:id="@+id/titleComment"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:id="@+id/middleSection"
        android:layout_height="wrap_content"
        android:layout_below="@id/TopSection">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/fillName"
            android:layout_height="wrap_content"
            android:hint="@string/fillName"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/fillEmail"
            android:layout_below="@id/fillName"
            android:layout_height="wrap_content"
            android:hint="@string/fillEmail"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fillEmail"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:id="@+id/fillPhoneNumber"
                android:layout_height="wrap_content"
                android:hint="@string/fillPhoneNumber"
                android:inputType="phone"
                android:layout_weight="0.7"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/phoneOptions"
                android:layout_weight="0.3"/>

        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_weight="1"
            android:onClick="onSubmit"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/clearAll"
            android:layout_weight="1"
            android:onClick="onClear"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_weight="1"
            android:onClick="onExit"/>

    </LinearLayout>

</RelativeLayout>
